--- a/Abonementus/Abonementus.entitlements
+++ b/Abonementus/Abonementus.entitlements
@@ -6,5 +6,7 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.files.documents.read-write</key>
+	<true/>
 </dict>
 </plist>
